# shared/generated/swagger.json
@@ -135,7 +135,7 @@
 				"$ref": "#/components/schemas/Pick_ConversationArea.Exclude_keyofConversationArea.type__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
-			"Pick_Omit_AuctionHouseArea.floors_.Exclude_keyofOmit_AuctionHouseArea.floors_.type__": {
+			"Pick_Omit_Omit_AuctionHouseArea.floors_.type_.Exclude_keyofOmit_Omit_AuctionHouseArea.floors_.type_.occupantsObj__": {
 				"properties": {
 					"id": {
 						"$ref": "#/components/schemas/InteractableID"
@@ -154,8 +154,8 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_Omit_AuctionHouseArea.floors_.type_": {
-				"$ref": "#/components/schemas/Pick_Omit_AuctionHouseArea.floors_.Exclude_keyofOmit_AuctionHouseArea.floors_.type__",
+			"Omit_Omit_Omit_AuctionHouseArea.floors_.type_.occupantsObj_": {
+				"$ref": "#/components/schemas/Pick_Omit_Omit_AuctionHouseArea.floors_.type_.Exclude_keyofOmit_Omit_AuctionHouseArea.floors_.type_.occupantsObj__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"Pick_ViewingArea.Exclude_keyofViewingArea.type__": {
@@ -482,7 +482,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_Omit_AuctionHouseArea.floors_.type_"
+								"$ref": "#/components/schemas/Omit_Omit_Omit_AuctionHouseArea.floors_.type_.occupantsObj_"
 							}
 						}
 					}
